chore: Add fixed status back to StatusPill

--- a/src/app/components/server/StatusPill.module.scss
+++ b/src/app/components/server/StatusPill.module.scss
@@ -28,7 +28,8 @@
     background: $color-blue-05;
   }
 
-  &.removed {
+  &.removed,
+  &.fixed {
     background: $color-green-20;
   }
 }
